<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addstory.AddStoryActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/add_story_img_cd"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/galleryButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/galery"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/previewImageView"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/galleryButton"
        app:layout_constraintTop_toTopOf="@+id/galleryButton" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/add_story_desc"
        android:background="@drawable/bg_edit_text"
        android:gravity="start|top"
        android:hint="@string/add_story_desc"
        android:inputType="textMultiLine"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintStart_toStartOf="@+id/previewImageView"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/locationCheckBox"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_location"
        app:layout_constraintStart_toStartOf="@+id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <Button
        android:id="@+id/locationButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="158dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_location"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/locationCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />


    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/previewImageView" />

    <TextView
        android:id="@+id/tv_latitude_value"
        android:layout_width="185dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationCheckBox"
        app:layout_constraintVertical_bias="0.514" />


</androidx.constraintlayout.widget.ConstraintLayout>