<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/maps"
            android:icon="@drawable/outline_location_on_24"
            android:title="@string/maps"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/localization"
            android:icon="@drawable/ic_language_24"
            android:title="@string/language"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_logout"
            android:title="@string/log_out"
            app:showAsAction="never" />
    </group>
</menu>